--- a/index.html
+++ b/index.html
@@ -1,49 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | Website Pribadi by Christian Roeroe</title>
-        <style>
-            h1{
-                font-family: Cambria;
-            }
-            p{
-                font-family: "Times New Roman";
-            }
-            .container {
-                display: flex;
-                align-items: center;
-            }
-            .gambar {
-                flex: 1;
-                margin-right: 20px;
-            }
-        </style>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Website Pribadi by Christian Roeroe</title>
+    <link rel="stylesheet" href="style_index.css">
+    <link rel="icon" href="iguana.png" type="image">
+</head>
 
-    <body>
-        <div class="container">
-            <img src="iguana.png" alt="Personal logo" height="200" width="200">
-            <h1>REASONLY PERSONAL HOMEPAGE</h1>      
-        </div>
-        <a href="index.html" target="situs pertama">
-            <button class="button">Home</button>
-        </a>
-        <a href="Gallery.html" target="situs kedua">
-            <button class="button">Gallery</button>
-        </a>
-        <a href="Blog.html" target="situs ketiga">
-        <button class="button">Blog</button>
-        </a>
-        <a href="Contact.html" target="situs keempat">
-        <button class="button">Contact</button>
-        </a>
-        <hr>
+<body>
+    <div class="container">
+        <img src="iguana.png" alt="Personal logo" height="200" width="200">
+        <h1>REASONLY PERSONAL HOMEPAGE</h1>      
+    </div>
 
-        <h1>Hi, Welcome to my website</h1>
+    <div class="button">
+        <a href="index.html" target="situs pertama">Home</a>
+        <a href="Gallery.html" target="situs kedua">Gallery</a>
+        <a href="Blog.html" target="situs ketiga">Blog</a>
+        <a href="Contact.html" target="situs keempat">Contact</a>
+    </div>
+
+    <br>
+
+    <h1>Hi, Welcome to my website</h1>
+
+    <div class="home-content">
         <p>Hello everyone, My name is Christian Roeroe. I was Informatics Engineering student at University Sam Ratulangi 
-            and this is my personal webpage</p>
-        <p>Thank You for Visit! ^^</p>
-    </body>
+        and this is my personal webpage. I am people who is very determined to learn what I am currently studying and 
+        interested learning data science and want to become an expert in this field. And also I'm interested studying more 
+        IT specialization such us machine learning and web development. One day I will become useful person in my work and 
+        will continue to achieve my dreams as data scientist.</p>
+        <p>Thank You for Visit! </p>
+    </div>
+
+    <div class="profile-photo"><img src="profile photo.png" alt="profile photo" height="500" width="500"></div>
+    <div class="quote">
+    <p>"Throughout my life to come, I aspire to take responsibility for the tasks that God has bestowed 
+        upon me as a form of serving Him."</p>
+    </div>
+
+    <div class="horizontal-line"></div>
+    <p>&copy; 2024 Reasonly Personal Homepage.com. All Rights Reserved.</p>
+</body>
 </html>
