--- a/Contact.html
+++ b/Contact.html
@@ -4,22 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact | Website Pribadi by Christian Roeroe</title>
-        <style>
-            h1{
-                font-family: Cambria;
-            }
-            p{
-                font-family: "Times New Roman";
-            }
-            .container {
-                display: flex;
-                align-items: center;
-            }
-            .gambar {
-                flex: 1;
-                margin-right: 20px;
-            }
-        </style>
+        <link rel="stylesheet" href="style_contact.css">
+        <link rel="icon" href="iguana.png" type="image">
     </head>
 
     <body>
@@ -27,63 +13,70 @@
             <img src="iguana.png" alt="Personal logo" height="200" width="200">
             <h1>REASONLY PERSONAL HOMEPAGE</h1>      
         </div>
-        <a href="index.html" target="situs pertama">
-            <button class="button">Home
-        </a>
-        <a href="Gallery.html" target="situs kedua">
-            <button class="button">Gallery</button>
-        </a>
-        <a href="Blog.html" target="situs ketiga">
-            <button class="button">Blog</button>
-        </a>
-        <a href="Contact.html" target="situs keempat">
-            <button class="button">Contact</button>
-        </a>
-        <hr>
 
-        <h1>Contact</h1>
-        <h2>Personal Information</h2>
-        <p>Address : Kelurahan Tingkulu Lingkungan 8, Kecamatan Wanea, Kota Manado, Sulawesi Utara, Postal Code 95119 Indonesia</p>
-        <p>Phone Number : (+62)81214906815</p>
-        <ul>
-            <li>
-                <a href="https://www.linkedin.com/in/christian-andreas-roeroe-452429259">
-                <img src="linkedin.png" alt="Linkedin" style="width:42px;height:42px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/rchristianandreas">
-                <img src="instagram.png" alt="instagram" style="width:42px;height:42px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://id.quora.com/profile/Christian-AR">
-                <img src="quora.png" alt="quora" style="width:42px;height:42px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/channel/UCnyziiOEl_e2HlYS4OxDBNw">
-                <img src="Youtube.png" alt="youtube" style="width:42px;height:42px;">
-                </a>
-            </li>
-            <li>
-                <a href="https://wa.me/6281214906815">
-                <img src="whatsapp.png" alt="Whatsapp" style="width:42px;height:42px;">
-                </a>
-            </li>
-        </ul>
-        <h2>Contact Me</h2>
-        <form action="#" method="POST">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+        <div class="button">
+            <a href="index.html" target="situs pertama">Home</a>
+            <a href="Gallery.html" target="situs kedua">Gallery</a>
+            <a href="Blog.html" target="situs ketiga">Blog</a>
+            <a href="Contact.html" target="situs keempat">Contact</a>
+        </div>
 
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+        <br>
 
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" required></textarea><br><br>
+        <div class="horizontal-line"></div>
 
-        <button type="submit">Submit</button>
-        </form>
+        <div class="contact-content">
+            <h1>Contact</h1>
+            <h2>Personal Information</h2>
+            <p>Address : Kelurahan Tingkulu Lingkungan 8, Kecamatan Wanea, Kota Manado, Sulawesi Utara, Postal Code 95119, Indonesia</p>
+            <p>Phone Number : (+62)81214906815</p>
+        </div>
+
+        <div class="contact">
+        <a href="https://www.linkedin.com/in/christian-andreas-roeroe-452429259">
+        <img src="linkedin.png" alt="Linkedin" style="width:42px;height:42px;">
+        </a>
+
+        <a href="https://www.instagram.com/rchristianandreas">
+        <img src="instagram.png" alt="instagram" style="width:42px;height:42px;">
+        </a>
+
+        <a href="https://id.quora.com/profile/Christian-AR">
+        <img src="quora.png" alt="quora" style="width:42px;height:42px;">
+        </a>
+
+        <a href="https://www.youtube.com/channel/UCnyziiOEl_e2HlYS4OxDBNw">
+        <img src="Youtube.png" alt="youtube" style="width:42px;height:42px;">
+        </a>
+        
+        <a href="https://wa.me/6281214906815">
+        <img src="whatsapp.png" alt="Whatsapp" style="width:42px;height:42px;">
+        </a>
+        </div>
+
+        <br>
+
+        <div class="contact-box">
+            <h2>Contact Me</h2>
+            <form action="#" method="POST">
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br><br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+
+            <label for="message">Message:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+            <button type="submit">Submit</button>
+            </form>
+        </div>
+        <br>
     </body>
+
+    <footer>
+        <br><br><br>
+        <div class="horizontal-line"></div>
+        <p>&copy; 2024 Reasonly Personal Homepage.com. All Rights Reserved.</p>
+    </footer>
 </html>
