--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <img src="iguana.png" alt="Personal logo" height="200" width="200">
         <h1>REASONLY PERSONAL HOMEPAGE</h1>      
     </div>
+    
+    <div class="horizontal-line"></div>
 
     <div class="button">
         <a href="index.html" target="situs pertama">Home</a>
@@ -20,8 +22,6 @@
         <a href="Blog.html" target="situs ketiga">Blog</a>
         <a href="Contact.html" target="situs keempat">Contact</a>
     </div>
-
-    <br>
 
     <h1>Hi, Welcome to my website</h1>
 
@@ -34,7 +34,9 @@
         <p>Thank You for Visit! </p>
     </div>
 
-    <div class="profile-photo"><img src="profile photo.png" alt="profile photo" height="500" width="500"></div>
+    <br><br><br><br><br>
+
+    <div class="profile-photo"><img src="profile photo.png" alt="profile photo" height="300" width="300"></div>
     <div class="quote">
     <p>"Throughout my life to come, I aspire to take responsibility for the tasks that God has bestowed 
         upon me as a form of serving Him."</p>
