--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <script src="JSindex.js"></script>
+
     <div class="container">
         <img src="iguana.png" alt="Personal logo" height="200" width="200">
         <h1>REASONLY PERSONAL HOMEPAGE</h1>      
@@ -17,10 +19,10 @@
     <div class="horizontal-line"></div>
 
     <div class="button">
-        <a href="index.html" target="situs pertama">Home</a>
-        <a href="Gallery.html" target="situs kedua">Gallery</a>
-        <a href="Blog.html" target="situs ketiga">Blog</a>
-        <a href="Contact.html" target="situs keempat">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="Gallery.html">Gallery</a>
+        <a href="Blog.html">Blog</a>
+        <a href="Contact.html">Contact</a>
     </div>
 
     <h1>Hi, Welcome to my website</h1>
@@ -37,9 +39,10 @@
     <br><br><br><br><br>
 
     <div class="profile-photo"><img src="profile photo.png" alt="profile photo" height="300" width="300"></div>
+    <br>
     <div class="quote">
     <p>"Throughout my life to come, I aspire to take responsibility for the tasks that God has bestowed 
-        upon me as a form of serving Him."</p>
+        upon me as a form of serving Him." - Christian Roeroe</p>
     </div>
 
     <div class="horizontal-line"></div>
