--- a/Gallery.html
+++ b/Gallery.html
@@ -9,6 +9,8 @@
     </head>
 
     <body>
+        <script src="JSgallery.js"></script>
+
         <div class="container">
             <img src="iguana.png" alt="Personal logo" height="200" width="200">
             <h1>REASONLY PERSONAL HOMEPAGE</h1>      
@@ -17,10 +19,10 @@
         <div class="horizontal-line"></div>
 
         <div class="button">
-            <a href="index.html" target="situs pertama">Home</a>
-            <a href="Gallery.html" target="situs kedua">Gallery</a>
-            <a href="Blog.html" target="situs ketiga">Blog</a>
-            <a href="Contact.html" target="situs keempat">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="Gallery.html">Gallery</a>
+            <a href="Blog.html">Blog</a>
+            <a href="Contact.html">Contact</a>
         </div>
 
         <h1>Gallery</h1>
