--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <div class="button">
         <a href="index.html">Home</a>
+        <a href="tutorial.html">Tutorial</a>
         <a href="Gallery.html">Gallery</a>
         <a href="Blog.html">Blog</a>
         <a href="Contact.html">Contact</a>
