Menambahkan tombol tutorial

--- a/Blog.html
+++ b/Blog.html
@@ -20,6 +20,7 @@
 
         <div class="button">
             <a href="index.html">Home</a>
+            <a href="tutorial.html">Tutorial</a>
             <a href="Gallery.html">Gallery</a>
             <a href="Blog.html">Blog</a>
             <a href="Contact.html">Contact</a>
@@ -31,14 +32,14 @@
             <div class="article">
                 <h2>Apakah Kuliah Penting ?</h2>
                 <p>
-            Perkuliahan menjadi suatu aktivitas kehidupan yang tentunya biasa banyak orang. Kuliah tentunya 
-            memiliki banyak hal penting karena membuka banyak kesempatan untuk mempelajari hal baru yang
-            tidak diperkenalkan dalam dunia sekolah apalagi perkuliahan disini lebih difokuskan pada bidang
-            ilmu tersendiri sehingga seseorang dapat memilih perkuliahan sesuai minat dan kemampuannya.
-            Selain itu, perkuliahan dapat mengembangkan kemampuan berpikir kritis dan komunikasi disini
-            dilibatkan studi kasus pemecahan masalah di kehidupan sehari-hari dan dilatih mematangkan cara 
-            berpikir. Ketika sudah lulus dalam perkuliahan seseorang akan mendapatkan peluang dalam mencari
-            lowongan pekerjaan sesuai kompetensinya. 
+                    Perkuliahan menjadi suatu aktivitas kehidupan yang tentunya biasa banyak orang. Kuliah tentunya 
+                    memiliki banyak hal penting karena membuka banyak kesempatan untuk mempelajari hal baru yang
+                    tidak diperkenalkan dalam dunia sekolah apalagi perkuliahan disini lebih difokuskan pada bidang
+                    ilmu tersendiri sehingga seseorang dapat memilih perkuliahan sesuai minat dan kemampuannya.
+                    Selain itu, perkuliahan dapat mengembangkan kemampuan berpikir kritis dan komunikasi disini
+                    dilibatkan studi kasus pemecahan masalah di kehidupan sehari-hari dan dilatih mematangkan cara 
+                    berpikir. Ketika sudah lulus dalam perkuliahan seseorang akan mendapatkan peluang dalam mencari
+                    lowongan pekerjaan sesuai kompetensinya. 
                 </p>
             </div>
 
@@ -56,15 +57,15 @@
             </div>
 
             <div class="article">
-            <h2>Pentingnya Data dalam Kehidupan</h2>
-            <p>
-                Siapa yang tidak pernah merasakan data dalam kehidupan. Informasi daftar belanjaan dari struk, 
-                nama mata kuliah beserta jadwalnya yang didapat pada krs, dan informasi pribadi yang terdapat pada
-                kartu tanda penduduk (KTP). Ternyata data sudah ada sejak zaman kuno yang terdapat pada aksara atau 
-                tulisan bangsa sumeria dan mesir yang digunakan untuk komunikasi dan mencatat peristiwa. Hingga saat 
-                ini data sudah tercakup luas dalam kehidupan kita saat ini. Keberadaannya membantu kita untuk 
-                menyimpan dan mengolah informasi yang dibutuhkan.  
-            </p>
+                <h2>Pentingnya Data dalam Kehidupan</h2>
+                <p>
+                    Siapa yang tidak pernah merasakan data dalam kehidupan. Informasi daftar belanjaan dari struk, 
+                    nama mata kuliah beserta jadwalnya yang didapat pada krs, dan informasi pribadi yang terdapat pada
+                    kartu tanda penduduk (KTP). Ternyata data sudah ada sejak zaman kuno yang terdapat pada aksara atau 
+                    tulisan bangsa sumeria dan mesir yang digunakan untuk komunikasi dan mencatat peristiwa. Hingga saat 
+                    ini data sudah tercakup luas dalam kehidupan kita saat ini. Keberadaannya membantu kita untuk 
+                    menyimpan dan mengolah informasi yang dibutuhkan.  
+                </p>
             </div>
         </div>
         <br><br>
