Menambahkan tombol tutorial

--- a/Contact.html
+++ b/Contact.html
@@ -20,6 +20,7 @@
 
         <div class="button">
             <a href="index.html">Home</a>
+            <a href="tutorial.html">Tutorial</a>
             <a href="Gallery.html">Gallery</a>
             <a href="Blog.html">Blog</a>
             <a href="Contact.html">Contact</a>
@@ -33,42 +34,42 @@
         </div>
 
         <div class="contact">
-        <a href="https://www.linkedin.com/in/christian-andreas-roeroe-452429259">
-        <img src="linkedin.png" alt="Linkedin" style="width:42px;height:42px;">
-        </a>
+            <a href="https://www.linkedin.com/in/christian-andreas-roeroe-452429259">
+                <img src="linkedin.png" alt="Linkedin" style="width:42px;height:42px;">
+            </a>
 
-        <a href="https://www.instagram.com/rchristianandreas">
-        <img src="instagram.png" alt="instagram" style="width:42px;height:42px;">
-        </a>
+            <a href="https://www.instagram.com/rchristianandreas">
+                <img src="instagram.png" alt="instagram" style="width:42px;height:42px;">
+            </a>
 
-        <a href="https://id.quora.com/profile/Christian-AR">
-        <img src="quora.png" alt="quora" style="width:42px;height:42px;">
-        </a>
+            <a href="https://id.quora.com/profile/Christian-AR">
+                <img src="quora.png" alt="quora" style="width:42px;height:42px;">
+            </a>
 
-        <a href="https://www.youtube.com/channel/UCnyziiOEl_e2HlYS4OxDBNw">
-        <img src="Youtube.png" alt="youtube" style="width:42px;height:42px;">
-        </a>
+            <a href="https://www.youtube.com/channel/UCnyziiOEl_e2HlYS4OxDBNw">
+                <img src="Youtube.png" alt="youtube" style="width:42px;height:42px;">
+            </a>
         
-        <a href="https://wa.me/6281214906815">
-        <img src="whatsapp.png" alt="Whatsapp" style="width:42px;height:42px;">
-        </a>
+            <a href="https://wa.me/6281214906815">
+                <img src="whatsapp.png" alt="Whatsapp" style="width:42px;height:42px;">
+            </a>
         </div>
 
         <br><br>
 
         <div class="contact-box">
             <h2>Contact Me</h2>
-            <form action="#" method="POST">
-            <label for="name">Name:</label><br>
-            <input type="text" id="name" name="name" required><br><br>
+            <form action="contact-form.php" method="POST">
+                <label for="name">Name:</label><br>
+                <input type="text" id="name" name="name" required><br><br>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br><br>
+                <label for="email">Email:</label><br>
+                <input type="email" id="email" name="email" required><br><br>
 
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="4" required></textarea><br><br>
+                <label for="message">Message:</label><br>
+                <textarea id="message" name="message" rows="4" required></textarea><br><br>
 
-            <button type="submit">Submit</button>
+                <button type="submit">Submit</button>
             </form>
         </div>
         <br>
